Fix wrap in desktop mode

--- a/styles/pages/statistics.module.scss
+++ b/styles/pages/statistics.module.scss
@@ -4,7 +4,7 @@
 	align-content: flex-start;
 	flex-wrap: wrap;
 	padding-block: 3.5vw;
-	column-gap: 4vw;
+	column-gap: 3.5vw;
 	row-gap: 3.5vw;
 }
 
